# pdf_read_streamlit

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
configs/: constants.py
outputs/generated_texts/: Exercise Score_alt_text.txt  SleepScore_alt_text.txt  alt_text_output_20250604_163604.txt  alt_text_output_20250604_164326.txt  alt_text_output_20250604_164405.txt  alt_text_output_20250604_164828.txt  alt_text_output_20250604_164845.txt  alt_text_output_20250604_165108.txt  alt_text_output_20250604_165117.txt  alt_text_output_20250604_165123.txt  alt_text_output_20250604_165320.txt  alt_text_output_20250604_165330.txt  alt_text_output_20250604_165338.txt  track_score_alt_text.txt
utils/: alt_text_generator.py  helpers.py  pdf_utils.py  preprocess.py
